# attention-probes

./: .gitignore  .gitmodules  README.md  attention_probe.py  config.yaml  config_haystack.yaml  gurnee_data.py  proto_data.py  pyproject.toml  render.py  serve.py  test_skyline_probe.py  train.py
attention_probe/: __init__.py  __main__.py  attention_probe.py  linear_classifier.py  skyline_probe.py  train_mosaic.py  trainer.py
scripts/: analyze_cache.py  analyze_haystack.py  gurnee_data.py  judge_all  progress_tracker.py  run_haystack  run_launcher.py  run_probes  train.py  train_all
scripts_mosaic/: run_experiments.py  run_results.py
src/: step1_extract_all.py
src_mosaic/: get_hidden_states.py
